<resources>
    <string name="app_name">Workshop for CBTis15</string>
    <string name="call_item">Telephone Call</string>
    <string name="location_item">Get Location</string>
    <string name="camera_item">Take a picture</string>
    <string name="video_item">Record a video</string>
    <string name="color_item">Change colors</string>
    <string name="color_red_item">Red</string>
    <string name="color_blue_item">Blue</string>
    <string name="color_green_item">Green</string>
    <string name="welcome">Welcome!</string>
    <string name="subtitle">Choose an option</string>
</resources>
